# Aurora.Collision

./: CMakeLists.txt  LICENSE
Code/Demo/: CMakeLists.txt
Code/Demo/Public/: Main.cpp
Code/Foundation/: CMakeLists.txt
Code/Foundation/Public/Collision/: Entity.cpp  Entity.hpp  Grid.cpp  Grid.hpp  Group.cpp  Group.hpp  Rectangle.cpp  Rectangle.hpp
Code/Foundation/Public/Core/: Common.cpp  Common.hpp  Core.cpp  Core.hpp
Code/Proxy/: CMakeLists.txt
Code/Proxy/Public/Collision/: COM_Grid.cpp  COM_Grid.hpp
Code/Proxy/Public/Core/: Proxy.cpp  Proxy.hpp  Proxy.rc
